UI Improve - dark mode response text color issue fix

--- a/assets/scss/control/_plugin-mode.scss
+++ b/assets/scss/control/_plugin-mode.scss
@@ -282,6 +282,9 @@
 		background: #252f47;
 		color: $light;
 	}
+	#response {
+		color: #fff;
+	}
 }
 .btl-tab-panel-inner .btl-tab-panel-header {
 	color: #fff;
